kubernetes/apps/zamaz/overlays/development/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zamaz-dev
  labels:
    environment: development
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: restricted
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: "workload=dev"
